# chat_app

./: README.md
client/: Cargo.toml
client/assets/: main.css
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
